{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 71,
  "lineage": "a5cb005e-d84f-9a0b-e3c2-941d905b4263",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042ad9eec03638628",
            "arn": "arn:aws:ec2:eu-central-1:139532582926:instance/i-06618936657ba43a3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "geoCitizen",
            "id": "i-06618936657ba43a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0873e99bc3fe9648c",
            "private_dns": "ip-172-31-32-198.eu-central-1.compute.internal",
            "private_ip": "172.31.32.198",
            "public_dns": "ec2-18-193-74-16.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.193.74.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c34298670658cd91",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "WebServer Security Group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f13e4432ca16d78a",
            "tags": {
              "Name": "Ubuntu-WebServer"
            },
            "tags_all": {
              "Name": "Ubuntu-WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0307e2db6004bcef2"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.geocit_profile",
            "aws_iam_role.geocit_accessToRDS",
            "aws_key_pair.aws_key",
            "aws_security_group.ubuntuSecurityGroup",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:139532582926:security-group/sg-02752641776e0a939",
            "description": "GeoCitizen. SecurityGroup for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02752641776e0a939",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "PostgreSQL Security Group",
            "name_prefix": "",
            "owner_id": "139532582926",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008b05236db3e2d5e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ubuntuSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:139532582926:security-group/sg-0307e2db6004bcef2",
            "description": "GeoCitizen. SecurityGroup for Ubuntu",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0307e2db6004bcef2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "WebServer Security Group",
            "name_prefix": "",
            "owner_id": "139532582926",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008b05236db3e2d5e"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}